feat: Refactor UpdateBuilder tests to utilize PreparedStatement for SQL execution